Archive2/c0/f74868436b2957/output
main.cpp:13:22: error: incompatible operand types ('shark aquarium::*' and 'trout aquarium::*')
    return dangerous ? &aquarium::shark : &aquarium::trout;
                     ^ ~~~~~~~~~~~~~~~~   ~~~~~~~~~~~~~~~~
1 error generated.
